# VkTF

./: .clang-format  .clang-tidy  .cmake-format.json  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  README.md  vcpkg.json
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/assets/shaders/: mesh.frag  mesh.vert
src/engine/: CMakeLists.txt  aabb.cppm  bounding_box.cppm  buffer.cppm  camera.cppm  command_pool.cppm  data_view.cppm  delta_time.cppm  descriptor_pool.cppm  device.cppm  engine.cpp  engine.cppm  glslang_compiler.cppm  gltf_asset.cppm  graphics_pipeline.cppm  image.cppm  instance.cppm  ktx_texture.cppm  log.cppm  material.cppm  mesh.cppm  model.cppm  physical_device.cppm  queue.cppm  scene.cpp  scene.cppm  shader_module.cppm  swapchain.cppm  texture.cppm  view_frustum.cppm  vma_allocator.cppm  window.cpp  window.cppm
src/engine/include/: glslang_compiler.h
src/game/: CMakeLists.txt  delta_time.cppm  game.cpp  game.cppm  game.h  main.cpp  window.cpp
src/game/assets/Main.1_Sponza/: NewSponza_Main_glTF_002.gltf  arch_stone_wall_01_BaseColor.ktx2  arch_stone_wall_01_Normal.ktx2  arch_stone_wall_01_Roughnessarch_stone_wall_01_Metalness.ktx2  brickwall_01_BaseColor.ktx2  brickwall_01_Normal.ktx2  brickwall_01_Roughnessbrickwall_01_Metalness.ktx2  brickwall_02_BaseColor.ktx2  brickwall_02_Normal.ktx2  brickwall_02_Roughnessbrickwall_02_Metalness.ktx2  ceiling_plaster_01_BaseColor.ktx2  ceiling_plaster_01_Normal.ktx2  ceiling_plaster_01_Roughnessceiling_plaster_01_Metalness.ktx2  ceiling_plaster_02_BaseColor.ktx2  ceiling_plaster_02_Roughnessceiling_plaster_01_Metalness.ktx2  col_1stfloor_BaseColor.ktx2  col_1stfloor_Normal.ktx2  col_1stfloor_Roughnesscol_1stfloor_Metalness.ktx2  col_brickwall_01_BaseColor.ktx2  col_brickwall_01_Normal.ktx2  col_brickwall_01_Roughnesscol_brickwall_01_Metalness.ktx2  col_head_1stfloor_BaseColor.ktx2  col_head_1stfloor_Normal.ktx2  col_head_1stfloor_Roughnesscol_head_1stfloor_Metalness.ktx2  col_head_2ndfloor_02_BaseColor.ktx2  col_head_2ndfloor_02_Normal.ktx2  col_head_2ndfloor_02_Roughnesscol_head_2ndfloor_02_Metalness.ktx2  col_head_2ndfloor_03_BaseColor.ktx2  col_head_2ndfloor_03_Normal.ktx2  col_head_2ndfloor_03_Roughnesscol_head_2ndfloor_03_Metalness.ktx2  dirt_decal_01_dirt_decal_01_mask_gltf_alpha_dirt_decal_Opacity.ktx2  door_stoneframe_01_BaseColor.ktx2  door_stoneframe_01_Normal.ktx2  door_stoneframe_01_Roughnessdoor_stoneframe_01_Metalness.ktx2  door_stoneframe_02_BaseColor.ktx2  door_stoneframe_02_Normal.ktx2  door_stoneframe_02_Roughnessdoor_stoneframe_02_Metalness.ktx2  floor_tiles_01_BaseColor.ktx2  floor_tiles_01_Normal.ktx2  floor_tiles_01_Roughnessfloor_tiles_01_Metalness.ktx2  (+33 more)
src/game/assets/PKG_A_Curtains/: NewSponza_Curtains_glTF.gltf  curtain_fabric_Normal.ktx2  curtain_fabric_Roughnesscurtain_fabric_Metalness.ktx2  curtain_fabric_blue_BaseColor.ktx2  curtain_fabric_green_BaseColor.ktx2  curtain_fabric_red_BaseColor.ktx2  metal_door_01_BaseColor.ktx2  metal_door_01_Normal.ktx2  metal_door_01_Roughnessmetal_door_01_Metalness.ktx2
src/game/assets/PKG_B_Ivy/: IvyLeaf_BaseColor.ktx2  IvyLeaf_Normal.ktx2  IvyLeaf_Roughness0.ktx2  NewSponza_IvyGrowth_glTF.gltf
src/game/assets/models/Main.1_Sponza/: NewSponza_Main_glTF_002.gltf  credits_license.txt
src/game/assets/models/Main.1_Sponza/textures/: arch_stone_wall_01_BaseColor.ktx2  arch_stone_wall_01_Normal.ktx2  arch_stone_wall_01_Roughnessarch_stone_wall_01_Metalness.ktx2  brickwall_01_BaseColor.ktx2  brickwall_01_Normal.ktx2  brickwall_01_Roughnessbrickwall_01_Metalness.ktx2  ceiling_plaster_02_BaseColor.ktx2  col_1stfloor_BaseColor.ktx2  col_brickwall_01_BaseColor.ktx2  col_brickwall_01_Roughnesscol_brickwall_01_Metalness.ktx2  col_head_1stfloor_BaseColor.ktx2  col_head_1stfloor_Normal.ktx2  col_head_2ndfloor_02_BaseColor.ktx2  col_head_2ndfloor_03_BaseColor.ktx2  col_head_2ndfloor_03_Roughnesscol_head_2ndfloor_03_Metalness.ktx2  door_stoneframe_01_BaseColor.ktx2  door_stoneframe_01_Roughnessdoor_stoneframe_01_Metalness.ktx2  door_stoneframe_02_BaseColor.ktx2  floor_tiles_01_BaseColor.ktx2  lionhead_01_Normal.ktx2  metal_door_01_BaseColor.ktx2  metal_door_01_Roughnessmetal_door_01_Metalness.ktx2  roof_tiles_01_Normal.ktx2  roof_tiles_01_Roughnessroof_tiles_01_Metalness.ktx2  stone_01_tile_Normal.ktx2  (+5 more)
src/game/assets/shaders/: mesh.frag  mesh.vert
src/game/include/: window.h
src/game/include/game/: delta_time.h  game.h
src/game/shaders/: fragment.glsl  mesh.frag  mesh.vert  vertex.glsl
src/geometry/: face.cpp  face.h  half_edge.h  half_edge_mesh.cpp  half_edge_mesh.h  mesh_simplifier.cpp  mesh_simplifier.h  vertex.h
src/graphics/: CMakeLists.txt  allocator.cpp  allocator.cppm  allocator.h  arc_camera.cpp  arc_camera.h  arcball.cpp  arcball.h  buffer.cpp  buffer.cppm  buffer.h  camera.cpp  camera.cppm  camera.h  command_pool.cppm  data_view.cppm  data_view.h  delta_time.cppm  delta_time.h  descriptor_pool.cppm  descriptor_sets.cppm  device.cpp  device.cppm  device.h  engine.cpp  engine.cppm  engine.h  glslang_compiler.cpp  glslang_compiler.cppm  glslang_compiler.h  gltf_asset.cppm  gltf_scene.cppm  graphics_pipeline.cppm  image.cpp  image.cppm  image.h  instance.cpp  instance.cppm  instance.h  ktx_texture.cpp  (+36 more)
src/graphics/include/graphics/: allocator.h  buffer.h  camera.h  device.h  engine.h  glslang_compiler.h  image.h  instance.h  mesh.h  model.h  physical_device.h  scene.h  shader_module.h  swapchain.h  window.h
src/graphics/include/math/: spherical_coordinates.h
src/math/: CMakeLists.txt  spherical_coordinates.cppm  spherical_coordinates.h
src/math/include/math/: spherical_coordinates.h
tests/: CMakeLists.txt  device.h
tests/engine/: camera_test.cpp  data_view_test.cpp  log_test.cpp
tests/geometry/: face_test.cpp  half_edge_mesh_test.cpp  half_edge_test.cpp  vertex_test.cpp
tests/graphics/: arcball_test.cpp  camera_test.cpp  data_view_test.cpp  data_view_tests.cpp  mesh_test.cpp  obj_loader_test.cpp
tests/math/: spherical_coordinates_test.cpp
(+44 files in other folders)
